@@ -2,15 +2,11 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>maintainer-wanted</herd>
-	<maintainer>
-		<email>gentoo@bitcetera.com</email>
-		<name>Sven Schwyn</name>
-	</maintainer>
 	<longdescription lang="en">
 		Trollop is a commandline option parser for Ruby that just gets out of
 		your way. One line of code per option is all you need to write. For that,
 		you get a nice automatically-generated help page, robust option parsing,
-		command subcompletion, and sensible defaults for everything you don‘t
+		command subcompletion, and sensible defaults for everything you don't
 		specify. 
 	</longdescription>
 </pkgmetadata>
